# ani-pull

./: .gitignore  CNAME  README.md  index.html  install.sh  main.py  pyproject.toml  release.sh  style.css
.github/workflows/: release.yml
AnimepaheAPI/: animepahe.py  utils.py
api/: consumet.py  downloader.py
debian/: ani-pull.postinst.debhelper  ani-pull.prerm.debhelper  changelog  control  copyright  rules
packaging/arch/: PKGBUILD
packaging/fedora/: ani-pull.spec
repo/: index.html  key.gpg
repo/conf/: distributions
scratch/: test_search.py
tests/: test_api.py
