[project]
name = "ani-pull"
version = "1.1.0"
description = "Anime downloader CLI"
authors = [
    { name = "Smasduq" }
]
license = {text = "MIT"}
readme = "README.md"
dependencies = [
    "requests",
    "beautifulsoup4",
    "yt-dlp",
    "rich",
    "cloudscraper",
    "tqdm"
]

[project.scripts]
ani-pull = "main:main"

[tool.anipull]
# Default application settings
default_resolution = "1080"
download_path = "~/Videos/Anime"
preferred_server_regex = "(m3u8)"
max_retries = 3
timeout = 15

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["api"]
py-modules = ["main"]